# polarspec

./: .gitignore  .gitmodules  CMakeLists.txt  Plot.cpp  PlotWindow.cpp  main.cpp  vcpkg.json
overlays/qwt/: CMakeLists.txt  QwtConfig.cmake.in  portfile.cmake  vcpkg.json
